Adjusted element dimensions and fixed layout spacing issues

--- a/style.css
+++ b/style.css
@@ -8,48 +8,53 @@
 body{
   font-family: "Outfit", sans-serif;
   background-color: var(--slate-300);
-  font-size: 15px;
+  font-size: 0.9375rem;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: hidden;
+
 }
 
 .main {
   background-color: var(--white);
-  width: 230px;
-  padding: 10px;
+  width: 20rem;
+  height: 31.0625rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: auto;
-  border-radius: 12px;
+  border-radius: 0.75rem;
   text-align: center;
+  box-shadow: 0 0.625rem 1.25rem rgba(0,0,0,0.05);
+  box-sizing: border-box;
+  padding: 1rem;
 }
 
 img {
-  width: 220px;
-  border-radius: 12px;
-
+  border-radius: 0.75rem;
+  width: 18rem;
+  height: 18rem;
 }
 
 .title {
-  font-size: 1.1rem;
+  font-size: 1.375rem;
   font-weight: 700;
-  margin: 15px;
+  margin: 24px 0.9375rem 16px 0.9375rem;
   color: var(--slate-900);
 }
 
 .description {
   font-weight: 400;
   color: var(--slate-500);
-  margin: 0 15px 20px 15px;
-  font-size: 0.8rem;
+  margin: 0 0.9375rem;
+  font-size: 0.9375rem;
+  line-height: 1.4;
+  padding: 0 0.625rem;
 }
 
 .attribution {
-  font-size: 11px; 
+  font-size: 0.6875rem; 
   text-align: center; 
 }
 
